--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,10 +1,13 @@
 .container{
     background-color: black;
     height: 100vh;
+    width: 100vw;
     display: flex;
-    align-content: flex-start
-
+    flex-wrap: wrap;
 }
 .contained{
     
+}
+footer{
+    background-color: grey;
 }
