--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,7 +1,7 @@
 .container{
     background-color: black;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -10,4 +10,16 @@
 }
 footer{
     background-color: grey;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+}
+.fa{
+    color: white;
+}
+.end-meeting{
+    background-color: darkgrey;
+    color: red;
+
 }
